Fix squashed-images-on-small-screens bug.

--- a/static_src/assets/style.scss
+++ b/static_src/assets/style.scss
@@ -143,6 +143,7 @@ html {
 }
 
 img {
+  height: auto;
   max-width: 100%;
 }
 
